# selfsuvis

./: .codex  .env.example  .env.sample  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  Makefile  README.md  TODOS.md  demo.py  local_path.md  main.py  pyproject.toml  skills.config.yaml
app/: api_utils.py  db.py  deps.py  main.py  schemas.py  state.py
app/routers/: admin.py  (+8 more)
docker/: Dockerfile.api  Dockerfile.mapper  Dockerfile.qdrant  Dockerfile.realtime_bridge  Dockerfile.realtime_reference  Dockerfile.tests  Dockerfile.ui  Dockerfile.worker  docker-compose.coop.yml  docker-compose.cvat.yml  docker-compose.no-gpu.yml  docker-compose.override.yml  docker-compose.realtime-bridge.yml  docker-compose.realtime-engines.yml  docker-compose.realtime.yml  docker-compose.test.yml  docker-compose.vllm.yml  docker-compose.yml  nginx.conf  pytest.ini  qdrant-config.yaml  qdrant-entrypoint.sh  vllm_entrypoint.sh
docs/: README.md  analytics.md  api.md  architecture.md  configuration.md  data_layout.md  develop.md  development.md  examples.md  future_implementation_directions.md  gaussian_splat.md  helpers.md  learning_path.md  licensing.md  local_path.md  model-catalog.md  operations.md  overview.md  performance.md  pipeline.md  quickstart-local.md  quickstart-pipeline.md  quickstart-production.md  quickstart.md  setup.md  streaming-mediamtx.md  tests.md  troubleshooting.md  ui.md
env/: README.md  prod.env  test.env
mapper/: main.py
models/: dino_model.py  efficientvit_model.py  gemma_model.py  openclip_model.py  rssm_model.py
pipeline/: __init__.py  active_learning.py  agentic_system.py  asr_model.py  audio_extractor.py  change_detection.py  cli_parser.py  cli_runner.py  config.py  dedup.py  demo_env.py  demo_runner.py  depth_model.py  detection_model.py  distill.py  downloader.py  edge_inference.py  elastic_indexer.py  ffmpeg_utils.py  florence_model.py  frame_extractor.py  global_map_db.py  gps_extractor.py  gps_registration.py  gsplat_builder.py  heuristics.py  icp_fusion.py  indexer.py  job_db.py  job_db_pg.py  map_builder.py  map_cache.py  mapper.py  mission_db.py  model_registry.py  net_utils.py  ocr_model.py  processed_db.py  qdrant_utils.py  qwen_model.py  (+11 more)
requirements/: requirements_mapper.txt  requirements_prod.txt  requirements_test.txt
scripts/: README.md  add_sensor_key.sh  analyse_local_run.py  backfill_captions.py  benchmark_qdrant_gps.py  bootstrap.sh  build_gallery.py  clean_data.sh  common.sh  compose.sh  coop-bootstrap.sh  coop-camera.sh  coop-clean-data.sh  coop-compose.sh  coop-credentials.sh  coop-ctl.sh  coop-data-dirs.sh  coop-env.sh  coop-install.sh  coop-mosquitto-tls.sh  coop-mqtt-users.sh  coop-release.sh  coop-test-usb-cameras.sh  ensure_data_dirs.sh  ensure_venv_pip.sh  eval_captions.py  export_onnx.py  finetune_dino.py  first_run_setup.sh  gen-env.sh  gen_mosquitto_selfsigned_tls.sh  generate_test_splat.py  hash_video.py  index_dir.sh  index_url.sh  init_mosquitto_users.sh  install_pm_tools.sh  install_requirements.sh  install_system_deps.sh  job_watch.sh  (+27 more)
src/nanochat/: Makefile  README.md  pyproject.toml  report.md
src/nanochat/nanochat/: common.py
src/nanochat/nanochat/data/: dataloader.py  dataset.py
src/nanochat/nanochat/inference/: engine.py
src/nanochat/nanochat/model/: flash_attention.py  gpt.py
src/nanochat/nanochat/training/: checkpoint_manager.py  report.py  schedule.py
src/nanochat/nanochat/ui/: __init__.py
src/nanochat/runs/: runcpu.sh  runlocal.sh  speedrun.sh
src/nanochat/scripts/: base_eval.py  base_train.py  bench_train.py  chat_cli.py  chat_eval.py  chat_rl.py  chat_sft.py  chat_web.py  detect_hw.py  tok_eval.py  tok_train.py
src/nanochat/tasks/: humaneval.py
src/nanochat/tests/: test_attention_fallback.py  test_engine.py  test_training_scripts.py
src/sslm/: README.md  main.py  pyproject.toml
src/sslm/sslm/: __init__.py  main.py
src/sslm/sslm/dashboard/: app.py
src/sslm/sslm/playground/: __init__.py  benchmarks.py  catalog.py  client.py  constants.py  finetune.py  orchestrator.py  sidecars.py
src/ssv_vdp/: __init__.py  cli.py  local_env.py  pyproject.toml
src/ssv_vdp/agentic/: processor.py
src/ssv_vdp/commands/: parser.py  runner.py
src/ssv_vdp/pipeline/: graph.py  runner.py  state.py
src/ssv_vdp/pipeline/nodes/: phase1.py  phase2_map.py  phase2_parallel.py  phase2_serial.py  phase2_tracking.py  phase3_ssl.py  phase4.py
src/ssv_vdp/pipeline/runner_helpers/: __init__.py  _agentic.py  _analytics.py  _compare.py  _init.py  _pipeline.py  _pipeline_phase1.py  _pipeline_phase2.py  _pipeline_phase3.py  _pipeline_phase4.py  _synthesis.py
src/ssv_vdp/scripts/: analyse_local_run.py  build_gallery.py  drone_audio_edge_infer.py  play_drone_sound.py  prepare_audio_data.py  split_drone_audio_data.py
src/ssv_vdp/steps/: caption.py  common.py  cosmos3.py  distill.py  drau_eval.py  drone_audio.py  drone_detection.py  embed.py  field_state.py  fusion.py  gemma_tracking.py  global_threat.py  local_threat.py  map.py  model_advisor.py  physical_state.py  policy.py  report.py  scenetok.py  semantic_graph.py  ssl.py  threat_contradictions.py  threat_eval.py  threat_primitives.py  yolo_sam.py
src/ssv_vdp/steps/adaptation/: __init__.py  distill.py  ssl.py
src/ssv_vdp/steps/caption/: __init__.py  _florence.py  _gemma_analysis.py  _sensing.py  _vlm.py  _world_model.py
src/ssv_vdp/steps/caption_helpers/: __init__.py  frame_selection.py  gemma_api.py  ocr.py  ollama.py  vlm_api.py  vram.py
src/ssv_vdp/steps/edge/: __init__.py  drau_eval.py  drone_audio.py  drone_detection.py
src/ssv_vdp/steps/perception/: __init__.py  cosmos3.py  embed.py  gemma_tracking.py  map.py  scenetok.py  semantic_graph.py  yolo_sam.py
src/ssv_vdp/steps/report_helpers/: __init__.py  _adaptation.py  _analysis.py  _captions.py  _multimodal.py  _search.py  _stats.py  _synthesis.py
src/ssv_vdp/steps/state/: __init__.py  fusion.py  physical_state.py
src/ssv_vdp/steps/threat/: __init__.py  local_threat.py  policy.py  threat_eval.py  threat_primitives.py
tests/: conftest.py  test_api.py
ui/: app.py
worker/: main.py
(+961 files in other folders)
