[project]
name = "nanochat"
version = "0.1.0"
description = "the minimal full-stack ChatGPT clone"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "fastapi>=0.117.1",
    "kernels>=0.11.7",
    "psutil>=7.1.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "tokenizers>=0.22.0",
    "setuptools>=65.0,<71",
    "tensorboard>=2.14.0",
    "torch==2.9.1",
    "uvicorn>=0.36.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pytest>=8.0.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.4",
    "transformers>=4.57.3",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# torch CUDA runtime wheel vs nvcc toolkit - these are independent:
#   torch+cu126 and torch+cu128 bundle CUDA runtime libs (cuBLAS, cuDNN, etc.)
#   nvcc (CUDA toolkit) is only needed to *compile* flash-attn or custom ops.
#
# CUDA 12.6 wheels are useful for pre-Blackwell systems with older R560 drivers.
# CUDA 12.8 wheels are required for Blackwell / SM 10.0+ GPUs.
# With nvcc 12.6 (max SM 9.0): torch+cu128 can still run on supported drivers; make install-fa
#   pins flash-attn to v2.7.4 or skips when no detected GPU arch is compilable.
# With nvcc 12.8+ (max SM 12.0): flash-attn latest compiles SM 12.0 kernels
#   for RTX 5000 / Blackwell Ultra GPUs.
#
# The legacy "gpu" extra intentionally aliases gpu-cu128 to cover Blackwell.
# CUDA 12.8 toolkit is only required when compiling SM 12.0 flash-attn kernels.
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "gpu-cu126" },
    { index = "pytorch-cu128", extra = "gpu" },
    { index = "pytorch-cu128", extra = "gpu-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.optional-dependencies]
cpu = [
    "torch==2.9.1",
]
gpu = [
    "torch==2.9.1",
]
gpu-cu126 = [
    "torch==2.9.1",
]
gpu-cu128 = [
    "torch==2.9.1",
]

[tool.setuptools.package-data]
"nanochat.ui" = ["static/ui.html", "static/logo.svg"]

[tool.uv]
default-groups = []
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
        { extra = "gpu-cu126" },
        { extra = "gpu-cu128" },
    ],
]
