[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sslm"
version = "0.1.0"
description = "Sidecar-based LLM/VLM/world-model benchmark playground"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "huggingface_hub>=0.24",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
eval = [
    "lm-eval[api]>=0.4.9",
    "transformers>=4.47",
]
dashboard = [
    "streamlit>=1.37",
    "pandas>=2.0",
    "matplotlib>=3.8",
]
train = [
    "accelerate>=0.26",
    "bitsandbytes>=0.43",
    "datasets>=2.18",
    "peft>=0.11",
    "torch>=2.3",
    "transformers>=4.47",
    "trl>=0.9",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
sslm = "sslm.main:main"

[tool.setuptools.packages.find]
where = ["."]
